// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityIndicator renders correctly  1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1.emotion-1 {
  color: #bd4932;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

<div
    aria-valuemax="1"
    aria-valuemin="0"
    class="sui-box emotion-1"
    role="progressbar"
  >
    <div
      class="emotion-0"
      style="height: 10px; width: 10px;"
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          stroke-width="4"
          style="stroke: currentColor; opacity: 0.2;"
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          stroke-width="4"
          style="stroke: currentColor; stroke-dashoffset: 60; stroke-dasharray: 80;"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with width=40px height=40px  1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1.emotion-1 {
  color: #bd4932;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

<div
    aria-valuemax="1"
    aria-valuemin="0"
    class="sui-box emotion-1"
    role="progressbar"
  >
    <div
      class="emotion-0"
      style="height: 40px; width: 40px;"
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          stroke-width="4"
          style="stroke: currentColor; opacity: 0.2;"
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          stroke-width="4"
          style="stroke: currentColor; stroke-dashoffset: 60; stroke-dasharray: 80;"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
